infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: server.com
      http:
        paths:
          - path: /api/current_user
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /api/logout
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /auth/google
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /auth/facebook
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /api/stripe
            pathType: Prefix
            backend:
              service:
                name: server-clusterip-srv
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-srv
                port:
                  number: 3000
